# Email-Todo-List

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  SIMPLIFIED_PIPELINE_README.md  app.py  package-lock.json  pyproject.toml  requirements.txt  styles.css
Data/processed/: statistics.json
src/analysis/: dataset_statistics.ipynb
src/classifier/: buisness_forecasting.ipynb  buisness_forecasting_copy.ipynb  business_classifier_balanced.ipynb  classify.py  classify_email.py  email_rule_parser.py  explore_emails_simple.py  rule_based.py
src/emails/: auth.py  no_timing_read_mail.py  read_mail.py
src/imap/: gmail_downloader.py  gmail_downloader_withgeneratetodo.py
src/model-server/: api_server.py  server_classify.py
src/preprocessing/: README.md  build_dataset.py  email_cleaner.py  preprocess_pipeline.py  process_enron.py  process_spam_assassin.py
src/server_test/: Dockerfile  app.py
src/todo_list/: call_LLM.py  generate_todo_list.py
